@@ -35,7 +35,7 @@ read_cb(int fd, short event, void *arg)
 	char buf[256];
 	int len;
 
-	len = read(fd, buf, sizeof(buf));
+	len = recv(fd, buf, sizeof(buf), 0);
 
 	printf("%s: read %d%s\n", __func__,
 	    len, len ? "" : " - means EOF");
@@ -64,7 +64,7 @@ main (int argc, char **argv)
 		return (1);
 
 
-	write(pair[0], test, strlen(test)+1);
+	send(pair[0], test, strlen(test)+1, 0);
 	shutdown(pair[0], SHUT_WR);
 
 	/* Initalize the event library */
